# json-joy-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CORE_PARITY_MATRIX.md  Cargo.toml  IMPLEMENTATION_INVENTORY.md  MVP_SCOPE.md  Makefile  PARITY_FILE_CHECKLIST.md  PORT_PLAN.md  README.md  TASKS.md  TEST_SUITE.md  UPSTREAM_IMPLEMENTATION_REVIEW.md  justfile
bench/: bench-chunks.mjs  bench-profile.mjs  bench-proto.mjs  bench.mjs  interop.cjs  package-lock.json  package.json  probe.mjs
bindings/python/: README.md  pyproject.toml
bindings/python/src/json_joy_rs/: __init__.py
bindings/wasm/: README.md
crates/base64/: Cargo.toml
crates/buffers/: Cargo.toml
crates/codegen/: Cargo.toml
crates/json-expression/: Cargo.toml
crates/json-expression/src/operators/: container.rs
crates/json-joy-json-pack/: Cargo.toml
crates/json-joy-json-pack/src/: constants.rs  json_pack_extension.rs  json_pack_mpint.rs  json_pack_value.rs  lib.rs  pack_value.rs
crates/json-joy-json-pack/src/avro/: decoder.rs  encoder.rs  mod.rs  schema_decoder.rs  schema_encoder.rs  schema_validator.rs  types.rs
crates/json-joy-json-pack/src/bencode/: decoder.rs  encoder.rs  error.rs  mod.rs  types.rs
crates/json-joy-json-pack/src/bson/: decoder.rs  encoder.rs  mod.rs  values.rs
crates/json-joy-json-pack/src/cbor/: codec.rs  constants.rs  convert.rs  decoder.rs  decoder_base.rs  decoder_dag.rs  encoder.rs  encoder_dag.rs  encoder_fast.rs  encoder_stable.rs  error.rs  mod.rs  shared.rs  types.rs
crates/json-joy-json-pack/src/codecs/: cbor.rs  json.rs  mod.rs  msgpack.rs  registry.rs  types.rs
crates/json-joy-json-pack/src/ejson/: encoder.rs  error.rs
crates/json-joy-json-pack/src/ion/: ast.rs  constants.rs  decoder.rs  encoder.rs  mod.rs  symbols.rs
crates/json-joy-json-pack/src/json/: decoder.rs  decoder_dag.rs  decoder_partial.rs  encoder.rs  encoder_dag.rs  encoder_stable.rs  error.rs  mod.rs  types.rs  util.rs
crates/json-joy-json-pack/src/json_binary/: codec.rs  constants.rs  mod.rs  types.rs
crates/json-joy-json-pack/src/msgpack/: decoder.rs  decoder_fast.rs  encoder.rs  encoder_fast.rs  encoder_stable.rs  error.rs  mod.rs  to_json.rs  util.rs
crates/json-joy-json-pack/src/resp/: constants.rs  decoder.rs  encoder.rs  encoder_legacy.rs  extensions.rs  mod.rs  streaming_decoder.rs
crates/json-joy-json-pack/src/rm/: decoder.rs  encoder.rs  mod.rs
crates/json-joy-json-pack/src/rpc/: constants.rs  decoder.rs  encoder.rs  errors.rs  messages.rs  mod.rs
crates/json-joy-json-pack/src/ssh/: decoder.rs  encoder.rs  error.rs  mod.rs
crates/json-joy-json-pack/src/ubjson/: decoder.rs  encoder.rs  error.rs  mod.rs
crates/json-joy-json-pack/src/ws/: constants.rs  decoder.rs  encoder.rs  errors.rs  frames.rs  mod.rs
crates/json-joy-json-pack/src/xdr/: decoder.rs  encoder.rs  mod.rs  schema_decoder.rs  schema_encoder.rs  types.rs
crates/json-joy-json-pack/tests/: upstream_port_avro_schema_validator_matrix.rs  upstream_port_bencode_matrix.rs  upstream_port_bson_matrix.rs  upstream_port_codecs_matrix.rs  upstream_port_ejson_matrix.rs  upstream_port_ion_matrix.rs  upstream_port_json_binary_matrix.rs  upstream_port_json_matrix.rs  upstream_port_msgpack_util_matrix.rs  upstream_port_resp_matrix.rs  upstream_port_ssh_matrix.rs  upstream_port_surface_types_matrix.rs  upstream_port_ubjson_matrix.rs  upstream_port_xdr_matrix.rs
crates/json-joy-json-path/: Cargo.toml
crates/json-joy-json-path/src/: JsonPathCodegen.rs  JsonPathEval.rs  JsonPathParser.rs  Value.rs  codegen.rs  eval.rs  index.rs  lib.rs  parser.rs  parser_impl.rs  types.rs  util.rs  value.rs
crates/json-joy-json-path/tests/: fixtures_json_path.rs  upstream_port_json_path_demo_matrix.rs  upstream_port_json_path_descendant_matrix.rs  upstream_port_json_path_exec_matrix.rs  upstream_port_json_path_functions_matrix.rs  upstream_port_json_path_matrix.rs  upstream_port_json_path_parser_matrix.rs
crates/json-joy-json-pointer/: Cargo.toml
crates/json-joy-json-pointer/src/: lib.rs
crates/json-joy-json-pointer/tests/: find_by_pointer_edge_cases.rs  upstream_port_json_pointer_matrix.rs
crates/json-joy-json-random/: Cargo.toml
crates/json-joy-json-random/src/: examples.rs  lib.rs
crates/json-joy-json-random/tests/: upstream_port_json_random_matrix.rs
crates/json-joy-json-type/: Cargo.toml
crates/json-joy-json-type/src/: constants.rs  lib.rs
crates/json-joy-json-type/src/codegen/: mod.rs
crates/json-joy-json-type/src/codegen/binary/: mod.rs
crates/json-joy-json-type/src/codegen/capacity/: mod.rs
crates/json-joy-json-type/src/codegen/discriminator/: index.rs  mod.rs
crates/json-joy-json-type/src/codegen/json/: mod.rs
crates/json-joy-json-type/src/codegen/validator/: mod.rs  types.rs  validator.rs
crates/json-joy-json-type/src/json_schema/: converter.rs  mod.rs
crates/json-joy-json-type/src/jtd/: converter.rs  mod.rs  types.rs
crates/json-joy-json-type/src/metaschema/: metaschema.rs  mod.rs
crates/json-joy-json-type/src/random/: mod.rs  random.rs
crates/json-joy-json-type/src/schema/: builder.rs  common.rs  mod.rs  schema.rs  validate.rs  walker.rs
crates/json-joy-json-type/src/type_def/: abs_type.rs  builder.rs  discriminator.rs  mod.rs
crates/json-joy-json-type/src/type_def/classes/: mod.rs
crates/json-joy-json-type/src/type_def/module_type/: mod.rs
crates/json-joy-json-type/src/typescript/: converter.rs  mod.rs  to_text.rs  types.rs
crates/json-joy-json-type/src/value/: fn_value.rs  mod.rs  obj_value.rs  value.rs
crates/json-joy-json-type/tests/: codegen.rs  converters.rs  upstream_port_discriminator_matrix.rs  upstream_port_json_type_codegen_matrix.rs
crates/json-joy-wasm/: Cargo.toml
crates/json-joy-wasm/js/: index.ts  package.json  tsconfig.json
crates/json-joy-wasm/js/src/: Model.ts  ModelApi.ts  Patch.ts  nodes.ts  types.ts
crates/json-joy-wasm/src/: lib.rs
crates/json-joy-wasm/src/extensions/: mod.rs  types.rs
crates/util/: Cargo.toml
crates/util/src/json_equal/: deep_equal.rs  mod.rs
crates/util/tests/: upstream_port_util_matrix.rs
tests/compat/: README.md  (+2 more)
(+1778 files in other folders)
