[workspace]
resolver = "2"

members = [
  "crates/sonic-forest",
  "crates/base64",
  "crates/buffers",
  "crates/json-equal",
  "crates/json-expression",
  "crates/json-joy",
  "crates/json-joy-json-pack",
  "crates/json-joy-json-path",
  "crates/json-joy-json-pointer",
  "crates/json-joy-json-random",
  "crates/json-joy-json-type",
  "crates/json-joy-wasm",
  "crates/util",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/BetterbaseHQ/json-joy-rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
