[package]
name = "json-joy-json-pack"
version = "0.18.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Binary serialization formats for json-joy (CBOR, MessagePack, JSON, and more)"

[dependencies]
json-joy-buffers = { path = "../buffers" }
json-joy-base64 = { path = "../base64" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"

[dev-dependencies]
