[package]
name = "json-joy-json-path"
version = "0.18.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/nicoth-in/json-joy-rs"
description = "JSONPath (RFC 9535) implementation - parse and evaluate JSONPath expressions"

[dependencies]
regex = "1.12"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
