[package]
name = "json-joy-json-pointer"
version = "0.18.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON Pointer (RFC 6901) utilities - parse, format, escape, find, and get values"

[dependencies]
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
