[package]
name = "json-joy-json-random"
version = "0.18.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Random JSON value generator for testing"

[dependencies]
json-joy-util = { path = "../util" }
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
