[package]
name = "json-joy-json-type"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-system and schema framework for json-joy"

[dependencies]
json-joy-json-pack = { path = "../json-joy-json-pack" }
json-joy-json-random = { path = "../json-joy-json-random" }
json-joy-buffers = { path = "../buffers" }
json-joy-util = { path = "../util" }
json-expression = { path = "../json-expression" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
rand = "0.8"

[dev-dependencies]
