[package]
name = "json-joy-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM coarse-grained entrypoints for json-joy-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
json-joy-core = { path = "../json-joy-core" }
serde_json = { version = "1.0", features = ["preserve_order"] }
wasm-bindgen = "0.2"

[dev-dependencies]
