[package]
name = "json-joy-util"
version = "0.18.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/nicoth-in/json-joy-rs"
description = "Utility functions for json-joy"

[dependencies]
json-joy-buffers = { path = "../buffers" }
json-joy-json-equal = { path = "../json-equal" }
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
